# py3dvision

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
py3dv/backbones/: dgcnn.py  diffusion_net.py
py3dv/dataset/: pair.py  single.py  utils.py
py3dv/features/: sddino.py  semantic.py
py3dv/losses/: common.py  fmap.py
py3dv/models/: fmnet.py
py3dv/rendering/: torch3d_render.py  utils.py
py3dv/utils/: fmap_util.py  geometry_util.py  shape_util.py  vis_util.py
